--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -57,7 +57,7 @@ obj-$(CONFIG_SEC_MODEM)		+= modem_if/
 obj-$(CONFIG_SEC_MODEM_V2)		+= modem_if_v2/
 obj-$(CONFIG_MFD_MAX77693)	+= max77693-muic.o
 obj-$(CONFIG_USB_SWITCH_FSA9480)	+= fsa9480.o
-obj-$(CONFIG_OMAP_DIE_TEMP_SENSOR)	+= omap_temp_sensor.o
+obj-$(CONFIG_OMAP_DIE_TEMP_SENSOR)	+= omap_temp_sensor.o temp_control.o
 obj-$(CONFIG_OMAP_4430_TEMP_SENSOR)	+= omap4430_temp_sensor.o
 obj-$(CONFIG_OMAP4_DUTY_CYCLE_LEGACY)  += omap4_duty_cycle.o
 obj-$(CONFIG_LEDS_AN30259A)	+= leds-an30259a.o
