--- a/arch/arm/configs/cyanogenmod_i9100g_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100g_defconfig
@@ -328,6 +328,7 @@ CONFIG_OMAP_PACKAGE_CBS=y
 # CONFIG_MACH_TUNA is not set
 CONFIG_OMAP_ALLOW_OSWR=y
 # CONFIG_OMAP_FIQ_DEBUGGER is not set
+CONFIG_OMAP_IPU_DEEPIDLE=y
 CONFIG_MACH_OMAP_SAMSUNG=y
 CONFIG_MACH_OMAP4_SAMSUNG=y
 CONFIG_MACH_SAMSUNG_T1=y
