--- a/arch/arm/configs/cyanogenmod_i9100g_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100g_defconfig
@@ -46,7 +46,7 @@ CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_KERNEL_LZMA=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP is not set=y
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -2245,6 +2245,12 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_IIO is not set
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
