--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -374,6 +374,13 @@ config OMAP_FIQ_DEBUGGER
 
 endmenu
 
+config FORCE_FAST_CHARGE
+	bool "Force AC charge mode at will"
+	default y
+	help
+	  A simple sysfs interface to force adapters that
+	  are detected as USB to charge as AC.
+
 endif
 
 source arch/arm/mach-omap2/Kconfig.sec
