--- a/arch/arm/configs/cyanogenmod_i9100g_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100g_defconfig
@@ -146,7 +146,7 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
-CONFIG_TRACEPOINTS=y
+# CONFIG_TRACEPOINTS is not set
 # CONFIG_DEFERRED_INITCALLS is not set
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
@@ -2638,30 +2638,30 @@ CONFIG_RCU_CPU_STALL_VERBOSE=y
 # CONFIG_FAULT_INJECTION is not set
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 # CONFIG_DEBUG_PAGEALLOC is not set
-CONFIG_NOP_TRACER=y
+# CONFIG_NOP_TRACER is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
-CONFIG_TRACER_MAX_TRACE=y
+# CONFIG_TRACER_MAX_TRACE is not set
 CONFIG_RING_BUFFER=y
-CONFIG_EVENT_TRACING=y
-CONFIG_EVENT_POWER_TRACING_DEPRECATED=y
-CONFIG_CONTEXT_SWITCH_TRACER=y
-CONFIG_TRACING=y
-CONFIG_GENERIC_TRACER=y
-CONFIG_TRACING_SUPPORT=y
+# CONFIG_EVENT_TRACING is not set
+# CONFIG_EVENT_POWER_TRACING_DEPRECATED is not set
+# CONFIG_CONTEXT_SWITCH_TRACER is not set
+# CONFIG_TRACING is not set
+# CONFIG_GENERIC_TRACER is not set
+# CONFIG_TRACING_SUPPORT is not set
 CONFIG_FTRACE=y
-CONFIG_FUNCTION_TRACER=y
-CONFIG_FUNCTION_GRAPH_TRACER=y
+# CONFIG_FUNCTION_TRACER is not set
+# CONFIG_FUNCTION_GRAPH_TRACER is not set
 # CONFIG_IRQSOFF_TRACER is not set
 # CONFIG_PREEMPT_TRACER is not set
-CONFIG_SCHED_TRACER=y
+# CONFIG_SCHED_TRACER is not set
 CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_PROFILE_ALL_BRANCHES is not set
-CONFIG_STACK_TRACER=y
+# CONFIG_STACK_TRACER is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
 CONFIG_DYNAMIC_FTRACE=y
 # CONFIG_FUNCTION_PROFILER is not set
