build zram as module

--- a/arch/arm/configs/omni_i9100g_defconfig
+++ b/arch/arm/configs/omni_i9100g_defconfig
@@ -2325,7 +2325,7 @@ CONFIG_ENHANCED_LMK_ROUTINE=y
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
 # CONFIG_XVMALLOC is not set
-CONFIG_ZRAM=y
+CONFIG_ZRAM=m
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
