t1: Add support for exFAT file system commit based on https://github.com/MoKee/android_kernel_samsung_t1/commit/1017d6f0bb76247338fe3b7d8ee2942bfb586a98

--- a/drivers/samsung/Kconfig
+++ b/drivers/samsung/Kconfig
@@ -22,3 +22,10 @@ menuconfig FM_SI4705
 	default n
 	help
 	  Say Y to enable Si4705 FM radio support.
+
+menuconfig EXFAT
+	tristate "Samsung EXFAT support"
+	depends on SAMSUNG_MODULES
+	default m
+	help
+	  Say Y to enable Samsung EXFAT support.
